--- a/application/admin/view/Index/index.html
+++ b/application/admin/view/Index/index.html
@@ -87,17 +87,12 @@
                         href="{:url('Distance/sewer')}">井盖信息</a></li>
                 <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
                         href="{:url('Distance/street')}">街道信息</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('Distance/excel')}">导入Excel</a></li>
+                <li class="func" dataType='html' dataLink='msn.htm' iconImg='images/msn.gif'><a
+                        href="{:url('Commodity/map')}">街道地图</a></li>
 
             </ul>
-            <!--<h3 class="am-icon-cart-plus"><em></em> <a href="#"> 订单管理</a></h3>-->
-            <!--<ul>-->
-            <!--<li>订单列表</li>-->
-            <!--<li>合并订单</li>-->
-            <!--<li>订单打印</li>-->
-            <!--<li>添加订单</li>-->
-            <!--<li>发货单列表</li>-->
-            <!--<li>换货单列表</li>-->
-            <!--</ul>-->
             <!--<h3 class="am-icon-users"><em></em> <a href="#">会员管理</a></h3>-->
             <!--<ul>-->
             <!--<li>会员列表 </li>-->
